--- a/about-us/index.html
+++ b/about-us/index.html
@@ -413,8 +413,8 @@ Vision
                                 <div class="textwidget">
                                     <p class="padding-top-10 margin-bottom-20"><i class="fas fa-map-marker-alt font-size-14"></i> 113/12 1st A Cross venkataswamappa Layout, Vidyaranyapura Bengaluru Karnataka, 560097
                                     </p>
-                                    <p class="margin-bottom-10"><i class="fas fa-mobile font-size-14"></i> <a href="tel:99670 33985">+91 99670 33985</a></p>
-                                    <p class="margin-bottom-10"><i class="fas fa-envelope font-size-14"></i> <a href="mailto:info@skycybernetics.nett">info@skycybernetics.net</a></p>
+                                    <p class="margin-bottom-10"><i class="fas fa-mobile font-size-14"></i> <a href="tel:99670 33985">54545454545</a></p>
+                                    <p class="margin-bottom-10"><i class="fas fa-envelope font-size-14"></i> <a href="mailto:info@skycybernetics.nett">dg@dg.com</a></p>
                                 </div>
                             </div>
 
