--- a/index.html
+++ b/index.html
@@ -1,10 +1,8 @@
 <!DOCTYPE html>
 <html lang="en-US" class="no-js">
 
-<!-- Mirrored from skycybernetics.net/ by HTTrack Website Copier/3.x [XR&CO'2014], Wed, 22 Jan 2020 08:39:10 GMT -->
-<!-- Added by HTTrack -->
 <meta http-equiv="content-type" content="text/html;charset=UTF-8" />
-<!-- /Added by HTTrack -->
+
 
 <head>
     <meta charset="UTF-8">
@@ -12,6 +10,8 @@
     <meta name=”keywords” content=”shop tyres,tyres car,tyre online, tyre market, activa tyre price, maxxis tyres, michelin tyres, tyres online”>
     <meta name=”description” content=“ Ethino Softcommerce is Indias’s leading Tyres traders and Consulting experts. We helps you to find the perfect tyre for your vehicle and the consultation for tyres.”>
     <link rel="profile" href="https://gmpg.org/xfn/11">
+    <!-- <link href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous"> -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <title>Ethino Softcommerce: Leading Tyres Traders and Consultants </title>
     <style type="text/css" data-type="vc_shortcodes-custom-css">
         .vc_custom_1579072824321 {
@@ -1111,7 +1111,7 @@ Vision
                             <div id="text-1" class="widget widget_text">
                                 <h2 class="widget-title"><span>Contact</span></h2>
                                 <div class="textwidget">
-                                    <p class="padding-top-10 margin-bottom-20"><i class="fas fa-map-marker-alt font-size-14"></i> 113/12 1st A Cross venkataswamappa Layout, Vidyaranyapura Bengaluru Karnataka, 560097
+                                    <p class="padding-top-10 margin-bottom-20"><i class="fa fa-map-marker font-size-14"></i> 113/12 1st A Cross venkataswamappa Layout, Vidyaranyapura Bengaluru Karnataka, 560097
                                     </p>
                                     <p class="margin-bottom-10"><i class="fas fa-mobile font-size-14"></i> <a href="tel:99670 33985">54545454545</a></p>
                                     <p class="margin-bottom-10"><i class="fas fa-envelope font-size-14"></i> <a href="mailto:info@skycybernetics.nett">dg@dg.com</a></p>
@@ -1124,7 +1124,7 @@ Vision
                                 <h2 class="widget-title"><span>Our Products</span></h2>
                                 <ul class="links-wrap clearfix ">
                                     <li style="">
-                                        <a href="our-products/idroneagri/index.html" style="">
+                                        <a href="our-products/index.html" style="">
                                             Ethino tyre p1
 </a>
                                     </li>
@@ -1245,7 +1245,5 @@ Contact Us
     <script id="shopping-cart-items-updater" type="text/javascript"></script>
 </body>
 
-<!-- Mirrored from skycybernetics.net/ by HTTrack Website Copier/3.x [XR&CO'2014], Wed, 22 Jan 2020 08:41:17 GMT -->
 
 </html>
-<!-- WP Fastest Cache file was created in 2.4602720737457 seconds, on 18-01-20 18:18:28 -->
